# bitcoin

./: .gitignore  CMakeLists.txt
docs/: gameplan.md  utxo.md
include/: balance.h  block.h  transaction.h  utxo.h
scripts/: compile.sh
src/: balance.c  block.c  main.cpp  transaction.c
src/blockchain/: block.cpp  block.h
src/crypto/: base58.cpp  base58.h  hash.cpp  hash.h  keys.cpp  keys.h
src/transaction/: transaction.cpp  transaction.h
tests/: hash.c  test_blockchain.c  test_transaction.c
